# mcp-demo

./: .gitignore  AgenticMCPUse.py  README.md  decorator.py  example2.py  pyproject.toml  requirements.txt  talk2mcp.py
