[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.184.0",
    "google-genai>=1.41.0",
    "mcp[cli]>=1.16.0",
    "pillow>=11.3.0",
    "pywin32>=311",
    "pywinauto>=0.6.9",
    "win32-gui-utils>=0.0.3",
]
